<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionesPassword.Agregar_Password">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!--Titulo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/EtTitulo"
                android:hint="@string/EtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:inputType="textCapWords|text"
                android:fontFamily="@font/opensans_condensed_regular"
                android:textSize="25sp"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Cuenta-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/EtCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EtCuenta"
                android:padding="16dp"
                android:inputType="textCapWords|text"
                android:fontFamily="@font/opensans_condensed_regular"
                android:textSize="18sp"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Nombre Cuenta-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/EtNombreUsuario"
                android:hint="@string/EtNombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:inputType="textCapWords|text"
                android:fontFamily="@font/opensans_condensed_regular"
                android:textSize="18sp"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/EtPassword"
                android:hint="@string/EtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:inputType="textPassword"
                android:fontFamily="@font/opensans_condensed_regular"
                android:textSize="18sp"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--SItio Web-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/EtSitioWeb"
                android:hint="@string/EtSitioWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:inputType="textWebEmailAddress"
                android:fontFamily="@font/opensans_condensed_regular"
                android:textSize="18sp"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Nota-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/EtNota"
                android:hint="@string/EtNota"
                android:height="150dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:inputType="textCapSentences|textMultiLine"
                android:fontFamily="@font/opensans_condensed_regular"
                android:textSize="18sp"
                android:gravity="start"/>

        </com.google.android.material.textfield.TextInputLayout>




    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>